# mcp-workshop

./: .gitignore  README.md  pyproject.toml
src/simple_mcp/: init.py  server.py
