[project]
name = "simple-mcp-workshop"
version = "0.1.0"
description = "A simple MCP server for workshop demonstrations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_mcp"]

[dependency-groups]
dev = []
